force-app/main/default/objects/Candidate__c/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <label>Candidate ID</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CID-50001</fullName>
            </value>
            <value>
                <fullName>CID-50002</fullName>
            </value>
            <value>
                <fullName>CID-50003</fullName>
            </value>
            <value>
                <fullName>CID-50004</fullName>
            </value>
            <value>
                <fullName>CID-50005</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>