force-app/main/default/objects/Candidate__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <label>Location Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Noida</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>