force-app/main/default/objects/Candidate__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>One Week</fullName>
            </value>
            <value>
                <fullName>Two Weeks</fullName>
            </value>
            <value>
                <fullName>One Month</fullName>
            </value>
            <value>
                <fullName>Two Months</fullName>
            </value>
            <value>
                <fullName>Three Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>