force-app/main/default/objects/Candidate__c/fields/PAN_SIN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_SIN_Number__c</fullName>
    <label>PAN/SIN Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>