force-app/main/default/objects/Candidate__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>M.Tech</fullName>
            </value>
            <value>
                <fullName>Ph.D</fullName>
            </value>
            <value>
                <fullName>M.S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>