force-app/main/default/objects/Candidate__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java-Salesforce</fullName>
            </value>
            <value>
                <fullName>Oracle DBA-Salesforce</fullName>
            </value>
            <value>
                <fullName>Java Developer-Salesforce</fullName>
            </value>
            <value>
                <fullName>Selenium-Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>